--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
-MATRIX-DIMENSIONS = 7
+MATRIX-DIMENSIONS = 8
 NUMBER_OF_PLAYERS = 3
-playerNames = Marko:Novica:Jovan
+playerNames = Marko:Novica:Jole
