--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 MATRIX-DIMENSIONS = 7
-NUMBER-OF-PLAYERS = 3
-PLAYER-NAMES = Marko:Jovan:Zoran
+NUMBER-OF-PLAYERS = 4
+PLAYER-NAMES = Marko:Zoran:Jovan:Novica
